--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,15 +63,7 @@ jobs:
           files: "*.zip"
 
       - name: Upload to CurseForge
-        uses: itsmeow/curseforge-upload@v3
-        with:
-          token: ${{ secrets.CURSEFORGE_API_TOKEN }}
-          game_endpoint: wow
-          project_id: 1338515
-          file_path: "${{ steps.meta.outputs.addon }}-${{ steps.meta.outputs.version }}.zip"
-          game_versions: 50503
-          release_type: release
-          display_name: "${{ steps.meta.outputs.addon }} ${{ steps.meta.outputs.version }}"
-          changelog: |
-            Automated release from GitHub
+        uses: BigWigsMods/packager@master
+        env:
+          CF_API_KEY: ${{ secrets.CURSEFORGE_API_TOKEN }}
 
